Font size-fix on iphone

--- a/Assets/Css/master.css
+++ b/Assets/Css/master.css
@@ -21,6 +21,7 @@ html,body {
 	font-size:12px;
 	color:#333;
 	-webkit-font-smoothing:antialiased;
+	-webkit-text-size-adjust:none; 
 }
 
 html {
